Removing z-index for line background. It causes issues with active line highlighting

--- a/reset.css
+++ b/reset.css
@@ -24,11 +24,6 @@
     outline: 1px solid #dddddd;
 }
 
-.CodeMirror:not(.cm-s-default) .CodeMirror-linebackground
-{
-    z-index: 5;
-}
-
 .CodeMirror:not(.cm-s-default) .CodeMirror-matchingtag
 {
     background: transparent;/*rgba(49, 49, 49, 0.9);*/
